2007-11-13	Till Straumann <strauman@slac.stanford.edu>

	* rtems/score/powerpc.h: Added a '__ppc_generic' CPU variant.
	The goal would be making cpukit and hopefully libcpu work
	for all (or at least most) CPUs/BSPs with -D__ppc_generic so
	that eventually all tests [#if defined(<cpu_flavor>)] for CPU
	flavors can be eliminated.

2007-11-13	Till Straumann <strauman@slac.stanford.edu>

	* rtems/powerpc/registers.h: Added SPR definitions for BookE
	DECAR, TCR, TSR.

2007-05-09	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/score/cpu.h: Remove CPU_HAS_OWN_HOST_TO_NETWORK_ROUTINES.

2007-04-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/score/cpu.h:
	  Use Context_Control_fp* instead of void* for fp_contexts.
	  Eliminate evil casts.

2006-12-12	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/score/ppc.h: Remove (Deprecated in 4.7).
	* Makefile: Remove rtems/score/ppc.h.

2006-11-17	Ralf Corsépius <ralf.corsepius@rtems.org>

	* rtems/score/types.h: Remove unsigned64, signed64.

2006-08-09	Joel Sherrill <joel@OARcorp.com>

	* rtems/score/cpu.h: Because gcc implicitly uses floating point turn on
	floating point for all threads if there is a hardware FPU.

2006-07-12      Till Straumann <strauman@slac.stanford.edu>

	* rtems/old-exceptions/cpu.h, rtems/powerpc/registers.h:
	Checked inline assembly; added early-clobber '&' to output operands
	of multi-instruction asms.

2006-01-16	Joel Sherrill <joel@OARcorp.com>

	* rtems/new-exceptions/cpu.h, rtems/old-exceptions/cpu.h,
	rtems/score/cpu.h: Part of a large patch to improve Doxygen output.
	As a side-effect, grammar and spelling errors were corrected, spacing
	errors were address, and some variable names were improved.

2005-11-08	Ralf Corsepius <ralf.corsepius@rtems.org>

	* rtems/score/types.h: Eliminate unsigned16, unsigned32.

2005-11-02      Till Straumann <strauman@slac.stanford.edu>

	* rtems/powerpc/registers.h: recognize mpc7457 CPU; added definitions
	for high bats (#4..7) on 7450 CPUs
