@@ -23,7 +23,7 @@
  *
  *  Derived from c/src/exec/cpu/no_cpu/cpu.h:
  *
- *  COPYRIGHT (c) 1989-2006.
+ *  COPYRIGHT (c) 1989-2007.
  *  On-Line Applications Research Corporation (OAR).
  *
  *  The license and distribution terms for this file may be found in
@@ -171,26 +171,6 @@ typedef struct {
   void *     (*stack_allocate_hook)( uint32_t   );
   void       (*stack_free_hook)( void* );
   /* end of fields required on all CPUs */
-
-  uint32_t     clicks_per_usec;	       /* Timer clicks per microsecond */
-  boolean      exceptions_in_RAM;     /* TRUE if in RAM */
-
-#if (defined(ppc403) || defined(ppc405) \
-  || defined(mpc860) || defined(mpc821) || defined(mpc8260))
-  uint32_t     serial_per_sec;	       /* Serial clocks per second */
-  boolean      serial_external_clock;
-  boolean      serial_xon_xoff;
-  boolean      serial_cts_rts;
-  uint32_t     serial_rate;
-  uint32_t     timer_average_overhead; /* Average overhead of timer in ticks */
-  uint32_t     timer_least_valid;      /* Least valid number from timer      */
-  boolean      timer_internal_clock;   /* TRUE, when timer runs with CPU clk */
-#endif
-
-#if (defined(mpc555) \
-  || defined(mpc860) || defined(mpc821) || defined(mpc8260))
-  uint32_t     clock_speed;            /* Speed of CPU in Hz */
-#endif
 }   rtems_cpu_table;
 
 /*
