@@ -396,54 +396,6 @@ static inline uint32_t CPU_swap_u32(
 
 #ifndef ASM
 /*
- *  Macros to access PowerPC specific additions to the CPU Table
- */
-
-#define rtems_cpu_configuration_get_clicks_per_usec() \
-   (_CPU_Table.clicks_per_usec)
-
-#define rtems_cpu_configuration_get_exceptions_in_ram() \
-   (_CPU_Table.exceptions_in_RAM)
-
-#if (defined(ppc403) || defined(ppc405) \
-  || defined(mpc860) || defined(mpc821) || defined(mpc8260))
-
-#define rtems_cpu_configuration_get_serial_per_sec() \
-   (_CPU_Table.serial_per_sec)
-
-#define rtems_cpu_configuration_get_serial_external_clock() \
-   (_CPU_Table.serial_external_clock)
-
-#define rtems_cpu_configuration_get_serial_xon_xoff() \
-   (_CPU_Table.serial_xon_xoff)
-
-#define rtems_cpu_configuration_get_serial_cts_rts() \
-   (_CPU_Table.serial_cts_rts)
-
-#define rtems_cpu_configuration_get_serial_rate() \
-   (_CPU_Table.serial_rate)
-
-#define rtems_cpu_configuration_get_timer_average_overhead() \
-   (_CPU_Table.timer_average_overhead)
-
-#define rtems_cpu_configuration_get_timer_least_valid() \
-   (_CPU_Table.timer_least_valid)
-
-#define rtems_cpu_configuration_get_timer_internal_clock() \
-   (_CPU_Table.timer_internal_clock)
-
-#endif
-
-#if (defined(mpc555) \
-  || defined(mpc860) || defined(mpc821) || defined(mpc8260))
-#define rtems_cpu_configuration_get_clock_speed() \
-   (_CPU_Table.clock_speed)
-#endif
-
-#endif /* ASM */
-
-#ifndef ASM
-/*
  *  Simple spin delay in microsecond units for device drivers.
  *  This is very dependent on the clock speed of the target.
  */
@@ -454,8 +406,9 @@ static inline uint32_t CPU_swap_u32(
 #define rtems_bsp_delay( _microseconds ) \
   do { \
     uint32_t   start, ticks, now; \
+    extern     uint32_t bsp_clicks_per_usec; \
     CPU_Get_timebase_low( start ) ; \
-    ticks = (_microseconds) * rtems_cpu_configuration_get_clicks_per_usec(); \
+    ticks = (_microseconds) * bsp_clicks_per_usec; \
     do \
       CPU_Get_timebase_low( now ) ; \
     while (now - start < ticks); \
